// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" can handle outlandings 1`] = `
Object {
  "completed": false,
  "distance": 94199.64354856145,
  "finish": undefined,
  "time": undefined,
  "turns": Array [
    Object {
      "point": Array [
        6.28125,
        50.989016666666664,
      ],
      "time": 1500306180000,
    },
    Object {
      "point": Array [
        6.1937500000000005,
        51.1723,
      ],
      "time": 1500308465000,
    },
  ],
  "validStarts": Array [
    Object {
      "point": Array [
        6.926316666666667,
        51.10086666666667,
      ],
      "time": 1500299777000,
    },
    Object {
      "point": Array [
        6.926533333333333,
        51.10013333333333,
      ],
      "time": 1500299800000,
    },
    Object {
      "point": Array [
        6.926566666666667,
        51.09955,
      ],
      "time": 1500299823000,
    },
    Object {
      "point": Array [
        6.9270000000000005,
        51.09813333333334,
      ],
      "time": 1500299892000,
    },
    Object {
      "point": Array [
        6.9177333333333335,
        51.1278,
      ],
      "time": 1500300293000,
    },
    Object {
      "point": Array [
        6.9177,
        51.12821666666667,
      ],
      "time": 1500300324000,
    },
    Object {
      "point": Array [
        6.917783333333333,
        51.127583333333334,
      ],
      "time": 1500300351000,
    },
    Object {
      "point": Array [
        6.917766666666667,
        51.12786666666667,
      ],
      "time": 1500300386000,
    },
    Object {
      "point": Array [
        6.91795,
        51.127633333333335,
      ],
      "time": 1500300415000,
    },
    Object {
      "point": Array [
        6.92185,
        51.11451666666667,
      ],
      "time": 1500301090000,
    },
    Object {
      "point": Array [
        6.922066666666667,
        51.11431666666667,
      ],
      "time": 1500301112000,
    },
    Object {
      "point": Array [
        6.922016666666667,
        51.11431666666667,
      ],
      "time": 1500301132000,
    },
    Object {
      "point": Array [
        6.928533333333333,
        51.093700000000005,
      ],
      "time": 1500302758000,
    },
    Object {
      "point": Array [
        6.930083333333334,
        51.087700000000005,
      ],
      "time": 1500302925000,
    },
    Object {
      "point": Array [
        6.93065,
        51.08641666666667,
      ],
      "time": 1500303226000,
    },
    Object {
      "point": Array [
        6.930366666666667,
        51.08711666666667,
      ],
      "time": 1500303283000,
    },
  ],
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" emits multiple start events 1`] = `
Array [
  Object {
    "coordinate": Array [
      6.914216666666667,
      51.13826666666667,
    ],
    "secOfDay": 51431,
    "time": 1500301031000,
  },
  Object {
    "coordinate": Array [
      6.92305,
      51.10805,
    ],
    "secOfDay": 52011,
    "time": 1500301611000,
  },
  Object {
    "coordinate": Array [
      6.92745,
      51.096900000000005,
    ],
    "secOfDay": 53015,
    "time": 1500302615000,
  },
  Object {
    "coordinate": Array [
      6.930316666666667,
      51.08435,
    ],
    "secOfDay": 53459,
    "time": 1500303059000,
  },
]
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" emits multiple turn events 1`] = `
Array [
  Array [
    Object {
      "coordinate": Array [
        6.2829,
        50.996633333333335,
      ],
      "secOfDay": 55467,
      "time": 1500305067000,
    },
    1,
  ],
  Array [
    Object {
      "coordinate": Array [
        6.194816666666667,
        51.173249999999996,
      ],
      "secOfDay": 57115,
      "time": 1500306715000,
    },
    2,
  ],
  Array [
    Object {
      "coordinate": Array [
        6.6080499999999995,
        50.96866666666667,
      ],
      "secOfDay": 58807,
      "time": 1500308407000,
    },
    3,
  ],
]
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" emits single finish event 1`] = `
Array [
  Object {
    "coordinate": Array [
      7.008533333333333,
      51.09851666666667,
    ],
    "secOfDay": 59951,
    "time": 1500309551000,
  },
]
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns a result 1`] = `
Object {
  "completed": true,
  "distance": 136420.85415876907,
  "finish": Object {
    "point": Array [
      7.008533333333333,
      51.09851666666667,
    ],
    "time": 1500309551000,
  },
  "time": 6492,
  "turns": Array [
    Object {
      "point": Array [
        6.2829,
        50.996633333333335,
      ],
      "time": 1500305067000,
    },
    Object {
      "point": Array [
        6.194816666666667,
        51.173249999999996,
      ],
      "time": 1500306715000,
    },
    Object {
      "point": Array [
        6.6080499999999995,
        50.96866666666667,
      ],
      "time": 1500308407000,
    },
  ],
  "validStarts": Array [
    Object {
      "point": Array [
        6.914216666666667,
        51.13826666666667,
      ],
      "time": 1500301031000,
    },
    Object {
      "point": Array [
        6.92305,
        51.10805,
      ],
      "time": 1500301611000,
    },
    Object {
      "point": Array [
        6.92745,
        51.096900000000005,
      ],
      "time": 1500302615000,
    },
    Object {
      "point": Array [
        6.930316666666667,
        51.08435,
      ],
      "time": 1500303059000,
    },
  ],
}
`;
